<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/add_activity_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/ToolBarTheme"/>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="?attr/actionBarSize"
        android:padding="16dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:id="@+id/amount_edit_text"
                android:textSize="@dimen/abc_text_size_display_1_material"
                android:singleLine="true"
                android:hint="@string/activity_edit_amount"
                android:layout_marginBottom="8dp"/>
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/activity_edit_date"
            android:layout_marginBottom="8dp"
            android:textSize="@dimen/abc_text_size_caption_material"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/date_button"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/abc_text_size_medium_material"
            android:layout_marginBottom="8dp"
            android:background="@color/background_fm_theme"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/activity_edit_type"
            android:layout_marginBottom="8dp"
            android:id="@+id/textView"
            android:textSize="@dimen/abc_text_size_caption_material"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:baselineAligned="false">

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button_incomes"
                android:textSize="@dimen/abc_text_size_medium_material"
                android:text="@string/incomes"
                android:layout_weight="1"
                android:background="@color/background_fm_theme"
                android:layout_marginRight="1dp"
                android:layout_marginBottom="8dp"
                android:textColor="@color/black"/>

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/expenses"
                android:textSize="@dimen/abc_text_size_medium_material"
                android:id="@+id/button_expenses"
                android:layout_weight="1"
                android:background="@color/background_fm_theme"
                android:layout_marginLeft="1dp"
                android:layout_marginBottom="8dp"
                android:textColor="@color/button_text_inactive"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/activity_edit_category"
            android:layout_marginBottom="8dp"
            android:textSize="@dimen/abc_text_size_caption_material"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/category_button"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="8dp"
            android:textSize="@dimen/abc_text_size_medium_material"
            android:background="@color/background_fm_theme"/>

    </LinearLayout>

    <android.support.v7.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/bottom_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        android:layout_gravity="bottom"
        android:elevation="@dimen/design_appbar_elevation"
        android:visibility="invisible"/>

</android.support.design.widget.CoordinatorLayout>
